--- a/assets/report.html
+++ b/assets/report.html
@@ -17,7 +17,7 @@
         <div class="header-right">
           <span class="material-icons-outlined"><a href="https://arantes.net.br">public</a></span>
           <span class="material-icons-outlined"><a href="mailto:luiz@arantes.net.br">email</a></span>
-          <span class="material-icons-outlined"><a href="www.linkedin.com/in/luizhenriquearantes">account_circle</a></span>
+          <span class="material-icons-outlined"><a href="https://www.linkedin.com/in/luizhenriquearantes">account_circle</a></span>
         </div>
       </header>
       <main class="main-container">
